--- a/healthcare-ui/package.json
+++ b/healthcare-ui/package.json
@@ -32,7 +32,7 @@
     "react-router-dom": "^7.11.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "npm:rolldown-vite@7.2.5"
+    "vite": "npm:rolldown-vite@^7.2.5"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.5"
