--- a/healthcare-ui/package.json
+++ b/healthcare-ui/package.json
@@ -32,7 +32,6 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "tailwindcss": "^3.3.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
